Added static content and secure always

--- a/about.htm
+++ b/about.htm
@@ -74,7 +74,6 @@ window.JOT_formatRelativeToNow=function(a,b){a=((new Date).getTime()-a)/6E4;if(1
 </style></head>
 <body xmlns="http://www.google.com/ns/jotspot" id="body" class=" en            ">
 <div id="sites-page-toolbar" class="sites-header-divider">
-<div xmlns="http://www.w3.org/1999/xhtml" id="sites-status" class="sites-status"><div id="sites-notice" class="sites-notice" role="status" aria-live="assertive">Preview page as viewer (<a href="https://sites.google.com/a/villagethegame.com/www/about?previewAsViewer=1&amp;mobile=true">Mobile</a> | Desktop)</div></div>
 </div>
 <div id="sites-chrome-everything-scrollbar">
 <div id="sites-chrome-everything" class="">
@@ -86,7 +85,7 @@ window.JOT_formatRelativeToNow=function(a,b){a=((new Date).getTime()-a)/6E4;if(1
 </tr>
 <tr class="sites-header-secondary-row" id="sites-chrome-horizontal-nav">
 <td colspan="2" id="sites-chrome-header-horizontal-nav-container" role="navigation">
-<div class="sites-header-nav"><ul class="sites-header-nav-container-tabs"><li class="current"><a class="sites-navigation-link current" href="https://sites.google.com/a/villagethegame.com/www/about">About</a></li><li class="unselected"><a class="sites-navigation-link unselected" href="http://game.villagethegame.com/" target="_blank">Village Makeover</a></li><li class="unselected"><a class="sites-navigation-link unselected" href="https://sites.google.com/a/villagethegame.com/www/connect">Connect</a></li></ul><div style="clear: both;"></div></div>
+<div class="sites-header-nav"><ul class="sites-header-nav-container-tabs"><li class="current"><a class="sites-navigation-link current" href="https://www.villagethegame.com/about">About</a></li><li class="unselected"><a class="sites-navigation-link unselected" href="https://www.villagethegame.com/" target="_blank">Village Makeover</a></li><li class="unselected"><a class="sites-navigation-link unselected" href="https://villagethegame.com/connect">Connect</a></li></ul><div style="clear: both;"></div></div>
 </td>
 </tr>
 </tbody></table>
