--- a/client/pay.html
+++ b/client/pay.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset=utf-8>
-  <link href="css/login.css" rel=stylesheet>
+  <link href="/client/css/login.css" rel=stylesheet>
 </head>
 <body>
   <div class=front>
