Didn't realize mixpanel required such manual integration.  It's refactored now.

--- a/client/logout.html
+++ b/client/logout.html
@@ -41,7 +41,7 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-5656121-3', 'auto');
-  ga('send', 'pageview');
+  ga("send", 'pageview');
 
 </script>
 </body>
