--- a/client/index.html
+++ b/client/index.html
@@ -298,7 +298,7 @@
         m.parentNode.insertBefore(a, m)
     })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
     ga('create', 'UA-5656121-3', 'auto');
-    ga('send', 'pageview');
+    ga("send", 'pageview');
 </script>
 </body>
 </html>
