--- a/client/index_fixlayout.html
+++ b/client/index_fixlayout.html
@@ -281,7 +281,7 @@
 </script>
 <!-- end Mixpanel -->
 <script>
-    mixpanel.track("Main Page Load")
+    ga("send",  "Main Page Load")
 </script>
 <script>
     (function (i, s, o, g, r, a, m) {
@@ -296,7 +296,7 @@
         m.parentNode.insertBefore(a, m)
     })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
     ga('create', 'UA-5656121-3', 'auto');
-    ga('send', 'pageview');
+    ga("send", 'pageview');
 </script>
 </body>
 </html>
