--- a/client/pay.html
+++ b/client/pay.html
@@ -38,7 +38,7 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-5656121-2', 'auto');
-  ga('send', 'pageview');
+  ga("send", 'pageview');
 
 </script>
   <script type="text/javascript">
