Removed broken link from contact dialog and synced up all three index files.

--- a/client/index_fixlayout.html
+++ b/client/index_fixlayout.html
@@ -234,6 +234,178 @@
             <!-- /Form -->
         </div>
     </div>
+    <div id="aboutDialog" title="About" style="display: none;">
+      <div>
+        <div>
+          <table cellspacing="0">
+            <tbody>
+              <tr>
+                <td>
+                  <div>
+                    <div>
+                      <span>In America, $100 can buy a nice pair of slacks. In Kenya, $100 can buy a water pump that will take an entire family permanently out of poverty. Millions of people in America care about people overseas but do not realize the power they have to transform lives overseas. Let's change that.</span>
+                    </div>
+                    <div>
+                      <div>
+                        <div>
+                          <span>
+                            <font size="3">
+                              <br>
+                            </font>
+                          </span>
+                        </div>
+                        <div>
+                          <span>
+                            <font size="3">The mission of Village the Game is to spread the proven solutions to poverty. &nbsp;The strategy is to inspire to people fall in love with these solutions and become the supporters and volunteer sales force of these companies. Our tactic is to let them discover solutions via online game. &nbsp;</font>
+                          </span>
+                        </div>
+                        <div>
+                          <span>
+                            <font size="3">
+                              <br>
+                            </font>
+                          </span>
+                        </div>
+                        <div>
+                          <span>
+                            <font size="3">In the picture to the right a woman talks on a cell phone she rents to farmers to get critical information for their harvest.  The solar panel in the background gives clean energy at affordable prices, and the farmer uses Kickstart's MoneyMaker pump to irrigate 10 times more crop than a watering bucket.  These ideas have already proved to work in Bangladesh, Brazil, and Kenya respectively.</font>
+                          </span>
+                        </div>
+                        <div>
+                          <span>
+                            <font size="3">
+                              <br>
+                            </font>
+                          </span>
+                        </div>
+                        <div>
+                          <span>
+                            <font size="3">Virtual Good / Donation Guide</font>
+                          </span>
+                        </div>
+                        <div>
+                          <div>
+                            <div>
+                              <table cellpadding="0" cellspacing="0">
+                                <thead>
+                                  <tr>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                  </tr>
+                                </thead>
+                                <tbody>
+                                  <tr>
+                                    <td>
+                                      <font size="3"><b>Item</b></font>
+                                    </td>
+                                    <td>
+                                      <font size="3"><b>Price in $USD<br></b></font>
+                                    </td>
+                                    <td>
+                                      <font size="3"><b>Village Bucks</b></font><br>
+                                    </td>
+                                  </tr>
+                                  <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                  </tr>
+                                  <tr>
+                                    <td>Pile of Cash</td>
+                                    <td>$4.99</td>
+                                    <td>500</td>
+                                  </tr>
+                                  <tr>
+                                    <td>Bag of Cash</td>
+                                    <td>$9.99</td>
+                                    <td>1200</td>
+                                  </tr>
+                                  <tr>
+                                    <td>Sack of Cash</td>
+                                    <td>$19.99</td>
+                                    <td>2500</td>
+                                  </tr>
+                                  <tr>
+                                    <td>Box of Cash</td>
+                                    <td>$49.99</td>
+                                    <td>6500</td>
+                                  </tr>
+                                  <tr>
+                                    <td>Chest of Cash</td>
+                                    <td>$99.99</td>
+                                    <td>1400</td>
+                                  </tr>
+                                </tbody>
+                              </table>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div >
+                        <br>
+                      </div>
+                    </div>
+                  </div>
+                </td>
+                <td>
+                  <div >
+                    <span >Mail:&nbsp;</span>
+                    <div >Village the Game</div>
+                    <div>
+                      <span >2014 Edgewater Dr</span>
+                    </div>
+                    <div>
+                      <span >Unit 196,&nbsp;</span>
+                    </div>
+                    <div>
+                      <span >Orlando, FL 32804</span>
+                    </div>
+                    <div>
+                      <span ><br></span>
+                    </div>
+                    <div >Voicemail: 310 439 8573.&nbsp;</div>
+                    <div >Email: info@villagethegame.com</div>
+                    <img border="0" src="https://sites.google.com/a/villagethegame.com/www/_/rsrc/1468871988048/about/colorsmall%20%281%29.jpg" >
+                  </div>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+    <div id="contactDialog" title="Contact" style="display: none;">
+      <div>
+        <table cellspacing="0">
+          <tbody>
+            <tr>
+              <td>
+                <div>
+                  <div>Connect with <a href="https://www.facebook.com/VillagetheGamecom-188596954538058/timeline/" rel="nofollow">Village the Game on Facebook</a></div>
+                  <div>Join the <a href="https://groups.google.com/forum/#!forum/villagethegame">Google Group for Village the Game</a>.&nbsp;</div>
+                  <div><br></div>
+                </div>
+              </td>
+              <td>
+                <div>
+                  <div>
+                  </div>
+                  <div>
+                    <img border="0" src="https://sites.google.com/a/villagethegame.com/www/_/rsrc/1468871987561/connect/Village_Vladimir.jpg">
+                  </div>
+                  <br>
+                </div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
     <div class="notifyIconContainer" id="notifyIconContainer"></div>
 </div> <!-- End hudcontainer -->
 <!-- start Mixpanel -->
