--- a/client/index.html
+++ b/client/index.html
@@ -385,8 +385,8 @@
           <tr>
             <td>
               <div>
-                <div>Connect with <a href="https://www.facebook.com/VillagetheGamecom-188596954538058/timeline/" rel="nofollow">Village the Game on Facebook</a></div>
-                <div>Join the <a href="https://groups.google.com/forum/#!forum/villagethegame">Google Group for Village the Game</a>.&nbsp;</div>
+                <div>Connect with <a target="_blank" href="https://www.facebook.com/VillagetheGamecom-188596954538058/timeline/" rel="nofollow">Village the Game on Facebook</a></div>
+                <div>Join the <a target="_blank" href="https://groups.google.com/forum/#!forum/villagethegame">Google Group for Village the Game</a>.&nbsp;</div>
                 <div><br></div>
               </div>
             </td>
