Updated google cloud link for static file

--- a/client/index_deploy.html
+++ b/client/index_deploy.html
@@ -25,9 +25,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js"></script>
     <script src="https://apis.google.com/js/client:platform.js" async defer></script>
 
-    <link href="/client/css/jqueryui-overrides.css" rel="stylesheet" type="text/css" />
-    <link href="/client/css/game.css" rel="stylesheet" type="text/css"/>
-    <link href="/client/css/menustyle.css" rel="stylesheet" type="text/css"/>
+    <link href="https://storage.googleapis.com/villagegamedev.appspot.com/css/jqueryui-overrides.css" rel="stylesheet" type="text/css" />
+    <link href="https://storage.googleapis.com/villagegamedev.appspot.com/css/game.css" rel="stylesheet" type="text/css"/>
+    <link href="https://storage.googleapis.com/villagegamedev.appspot.com/css/menustyle.css" rel="stylesheet" type="text/css"/>
 
     <link rel="shortcut icon" href="/favicon.ico?v=2">
     <!-- Isogenic Loader -->
