--- a/client/index_fixlayout.html
+++ b/client/index_fixlayout.html
@@ -36,8 +36,8 @@
     <script src="/js/jQueryRotate.js"></script>
 
 
-    <link href="/client/css/jqueryui-overrides.css" rel="stylesheet" type="text/css"/>
-    <link href="/client/css/game.css" rel="stylesheet" type="text/css"/>
+    <link href="https://storage.googleapis.com/villagegamedev.appspot.com/css/jqueryui-overrides.css" rel="stylesheet" type="text/css"/>
+    <link href="https://storage.googleapis.com/villagegamedev.appspot.com/css/game.css" rel="stylesheet" type="text/css"/>
 
 
     <link rel="shortcut icon" href="/favicon.ico?v=2">
