add sign in button

--- a/client/index.html
+++ b/client/index.html
@@ -64,13 +64,17 @@
         <li class="allPointerEvents" id="waterbar" title="Buy Water"><img src="assets/textures/ui/Water-48.png"/><span class="waterbarProgress"
                                                                                               id="waterbarProgress"></span></li>
         <li class="allPointerEvents" id="fullscreenIcon" title="Toggle Fullscreen Mode"><img src="assets/textures/ui/Expand_2.png"/><img src="assets/textures/ui/Collapse_2.png" style="display:none;"></li>
-        <li class="allPointerEvents" id="volume" title="Toggle Sound"><img src="/client/assets/textures/ui/Speaker-48.png"/><img src="/client/assets/textures/ui/Mute-48.png" style="display:none;"/></li>
+        <li class="allPointerEvents" id="volume" title="Toggle Sound"><img src="assets/textures/ui/Speaker-48.png"/><img src="/client/assets/textures/ui/Mute-48.png" style="display:none;"/></li>
         <li class="allPointerEvents" id="marketButton" title="Buy New Items"><img src="assets/textures/ui/Shop.png"/></li>
 
         <li class="allPointerEvents" id="goalButton" title="Current Goals">
             <img src="assets/textures/ui/star.png"/>
             <span class="toolbarNotification" id="newGoalNotification">New Goal!</span>
             <span class="toolbarNotification" id="goalCompleteNotification">Goal Complete!</span>
+        </li>
+        <li class="allPointerEvents" id="signinButton" title="Login to Save">
+            <img src="assets/textures/ui/save.png"/>
+            <span class="toolbarNotification" id="Loggedin">Auto Saved</span>
         </li>
         <li class="allPointerEvents" id="moveButton" title="Move Items">
             <img src="assets/textures/ui/FourDirections52.png"/>
@@ -385,8 +389,8 @@
           <tr>
             <td>
               <div>
-                <div>Connect with <a href="https://www.facebook.com/VillagetheGamecom-188596954538058/timeline/" rel="nofollow">Village the Game on Facebook</a></div>
-                <div>Join the <a href="https://groups.google.com/forum/#!forum/villagethegame">Google Group for Village the Game</a>.&nbsp;</div>
+                <div>Connect with <a target="_blank" href="https://www.facebook.com/VillagetheGamecom-188596954538058/timeline/" rel="nofollow">Village the Game on Facebook</a></div>
+                <div>Join the <a target="_blank" href="https://groups.google.com/forum/#!forum/villagethegame">Google Group for Village the Game</a>.&nbsp;</div>
                 <div><br></div>
               </div>
             </td>
