add sign in button

--- a/client/index_fixlayout.html
+++ b/client/index_fixlayout.html
@@ -76,14 +76,14 @@
         </li>
         <li id="fullscreenIcon" title="Toggle Fullscreen Mode"><img src="assets/textures/ui/Expand_2.png"/><img
                 src="assets/textures/ui/Collapse_2.png" style="display:none;"></li>
-        <li id="volume" title="Toggle Sound"><img src="/client/assets/textures/ui/Speaker-48.png"/></li>
+        <li id="volume" title="Toggle Sound"><img src="assets/textures/ui/Speaker-48.png"/></li>
         <li id="marketButton" title="Buy New Items"><img src="assets/textures/ui/Shop.png"/></li>
 
         <li id="goalButton" title="Current Goals"><img src="assets/textures/ui/star.png"/><span
                 class="newGoalNotification"
                 id="newGoalNotification">New Goal!</span>
         </li>
-
+        <li id="signinButton" title="Login to Save!"><img src="assets/textures/ui/save.png"/></li>
         <li id="dropDownIcon" title="Player Menu" class="rightli"><img src="assets/textures/ui/Menu.png"/></li>
     </ul>
     <span id="notificationMessage"></span>
@@ -386,8 +386,8 @@
             <tr>
               <td>
                 <div>
-                  <div>Connect with <a href="https://www.facebook.com/VillagetheGamecom-188596954538058/timeline/" rel="nofollow">Village the Game on Facebook</a></div>
-                  <div>Join the <a href="https://groups.google.com/forum/#!forum/villagethegame">Google Group for Village the Game</a>.&nbsp;</div>
+                  <div>Connect with <a target="_blank" href="https://www.facebook.com/VillagetheGamecom-188596954538058/timeline/" rel="nofollow">Village the Game on Facebook</a></div>
+                  <div>Join the <a target="_blank" href="https://groups.google.com/forum/#!forum/villagethegame">Google Group for Village the Game</a>.&nbsp;</div>
                   <div><br></div>
                 </div>
               </td>
