--- a/client/index.html
+++ b/client/index.html
@@ -72,7 +72,7 @@
             <span class="toolbarNotification" id="newGoalNotification">New Goal!</span>
             <span class="toolbarNotification" id="goalCompleteNotification">Goal Complete!</span>
         </li>
-        <li class="allPointerEvents" id="signinButton" title="Login to Save">
+        <li class="allPointerEvents" id="saveButton" title="Login to Save">
             <img src="assets/textures/ui/save.png"/>
             <span class="toolbarNotification" id="Loggedin">Auto Saved</span>
         </li>
