--- a/client/index_fixlayout.html
+++ b/client/index_fixlayout.html
@@ -83,7 +83,7 @@
                 class="newGoalNotification"
                 id="newGoalNotification">New Goal!</span>
         </li>
-        <li id="signinButton" title="Login to Save!"><img src="assets/textures/ui/save.png"/></li>
+        <li id="saveButton" title="Login to Save!"><img src="assets/textures/ui/save.png"/></li>
         <li id="dropDownIcon" title="Player Menu" class="rightli"><img src="assets/textures/ui/Menu.png"/></li>
     </ul>
     <span id="notificationMessage"></span>
