--- a/client/index_deploy.html
+++ b/client/index_deploy.html
@@ -72,15 +72,17 @@
             <span class="toolbarNotification" id="newGoalNotification">New Goal!</span>
             <span class="toolbarNotification" id="goalCompleteNotification">Goal Complete!</span>
         </li>
-        <li class="allPointerEvents" id="saveButton" title="Login to Save">
-            <img src="assets/textures/ui/save.png"/>
-            <span class="toolbarNotification" id="Loggedin">Auto Saved</span>
-        </li>
         <li class="allPointerEvents" id="moveButton" title="Move Items">
             <img src="assets/textures/ui/FourDirections52.png"/>
             <span class="toolbarNotification" id="endMove">End Move</span>
         </li>
-        <li class="allPointerEvents" id="dropDownIcon" title="Player Menu" class="rightli"><img src="assets/textures/ui/Menu.png"/></li>
+        <li class="allPointerEvents" id="saveButton" title="Login to Save">
+            <img src="assets/textures/ui/save.png"/>
+            <span class="toolbarNotification" id="Loggedin">Auto Saved</span>
+        </li>
+        <li class="allPointerEvents" id="dropDownIcon" title="Player Menu">
+            <img src="assets/textures/ui/Menu.png"/>
+        </li>
     </ul>
     <span id="notificationMessage"></span>
     <div id="villageTitle"></div>
