--- a/client/index_fixlayout.html
+++ b/client/index_fixlayout.html
@@ -68,11 +68,11 @@
 </ul>
 <div id="hudcontainer">
     <ul id="topToolbar">
-        <li id="cashbar" title="Buy VBucks"><img src="assets/textures/ui/Banknotes.png"/><span class="cashbarProgress"
-                                                                                               id="cashbarProgress"></span>
+        <li id="cashbar" title="Buy VBucks"><img src="assets/textures/ui/Banknotes.png"/>
+            <span class="cashbarProgress" id="cashbarProgress"></span>
         </li>
-        <li id="coinbar" title="Buy Coins"><img src="assets/textures/ui/Coin1.png"/><span class="coinbarProgress"
-                                                                                          id="coinbarProgress"></span>
+        <li id="coinbar" title="Buy Coins"><img src="assets/textures/ui/Coin1.png"/>
+            <span class="coinbarProgress" id="coinbarProgress"></span>
         </li>
         <li id="fullscreenIcon" title="Toggle Fullscreen Mode"><img src="assets/textures/ui/Expand_2.png"/><img
                 src="assets/textures/ui/Collapse_2.png" style="display:none;"></li>
@@ -84,7 +84,7 @@
                 id="newGoalNotification">New Goal!</span>
         </li>
         <li id="saveButton" title="Login to Save!"><img src="assets/textures/ui/save.png"/></li>
-        <li id="dropDownIcon" title="Player Menu" class="rightli"><img src="assets/textures/ui/Menu.png"/></li>
+        <li id="dropDownIcon" title="Player Menu"><img src="assets/textures/ui/Menu.png"/></li>
     </ul>
     <span id="notificationMessage"></span>
     <div id="villageTitle"></div>
