added js2 route

--- a/client/index_deploy.html
+++ b/client/index_deploy.html
@@ -35,7 +35,7 @@
         var igeRoot = '/ige/engine/';
     </script>
 
-    <script id="gameStartScript" data-location="deploy" type="text/javascript" src="/client/deploy/gameStart.min.js"></script>
+    <script id="gameStartScript" data-location="deploy" type="text/javascript" src="/js2/gameStart.min.js"></script>
 </head>
 <body>
 <!-- Google Tag Manager (noscript) -->
