--- a/client/index.html
+++ b/client/index.html
@@ -148,30 +148,45 @@
     <div id="cashBuyDialog" title="Buy VBucks" style="display:none">
         <ul class="assetList" id="cashAssetList">
             <li class="assetItem">
-                <img class="cashIcon" src="/assets/images/ui/Banknotes.png">
-                <span class="assetAmount"></span>
-                <img class="cashIcon" src="/assets/images/ui/Bank_2.png">
-                <span class="assetPay"></span>
+                <table>
+                    <tr>
+                        <td align="left"><img class="cashIcon" src="/assets/images/ui/Banknotes.png"></td>
+                        <td width="60" align="right" class="assetAmount"></td>
+                        <td width="120"></td>
+                        <td align="left"><img class="cashIcon" src="/assets/images/ui/Bank_2.png"></td>
+                        <td width="65" align="right" class="assetPay"></td>
+                    </tr>
+                </table>
             </li>
         </ul>
     </div>
     <div id="coinBuyDialog" title="Buy Coins" style="display:none">
         <ul class="assetList" id="coinAssetList">
             <li class="assetItem">
-                <img class="coinIcon" src="/assets/images/ui/Coin1.png">
-                <span class="assetAmount"></span>
-                <img class="cashIcon" src="/assets/images/ui/Banknotes.png">
-                <span class="assetPay"></span>
+                <table>
+                    <tr>
+                        <td align="left"><img class ="coinIcon" src="/assets/images/ui/Coin1.png"></td>
+                        <td width="60" align="right" class="assetAmount"></td>
+                        <td width="120"></td>
+                        <td align="left"><img class="cashIcon" src="/assets/images/ui/Banknotes.png"></td>
+                        <td width="40" align="right" class="assetPay"></td>
+                    </tr>
+                </table>
             </li>
         </ul>
     </div>
     <div id="waterBuyDialog" title="Buy Water" style="display:none">
         <ul class="assetList" id="waterAssetList">
             <li class="assetItem">
-                <img class="waterIcon" src="/assets/images/ui/Water-48.png">
-                <span class="assetAmount"></span>
-                <img class="cashIcon" src="/assets/images/ui/Banknotes.png">
-                <span class="assetPay"></span>
+                <table>
+                    <tr>
+                        <td align="left"><img class="waterIcon" src="/assets/images/ui/Water-48.png"></td>
+                        <td width="60" align="right" class="assetAmount"></td>
+                        <td width="120"></td>
+                        <td align="left"><img class="cashIcon" src="/assets/images/ui/Banknotes.png"></td>
+                        <td width="40" align="right" class="assetPay"></td>
+                    </tr>
+                </table>
             </li>
         </ul>
     </div>
