allign market dialog

--- a/client/index.html
+++ b/client/index.html
@@ -103,16 +103,22 @@
                             <td class="iconcell" >
                                 <img  class="marketItemImage" src="/favicon.ico?v=2"></td>
                             <td class="marketItemTitle">Title</td>
-                            <td class="marketItemCoins"><img class="marketCoinIcon"
-                                                                   src="assets/images/ui/Coin1.png">0</td>
-                            <td class="marketItemCash"><img class="marketCashIcon"
-                                                                  src="assets/images/ui/Banknotes.png">0</td>
+                            <td class="marketItemCoins">
+                                <img class="marketCoinIcon" src="assets/images/ui/Coin1.png">
+                                0
+                            </td>
+                            <td class="marketItemCash">
+                                <img class="marketCashIcon" src="assets/images/ui/Banknotes.png">
+                                0
+                            </td>
                             <td class="unlock" role="button">
                                 Unlock
                                 <img src="assets/images/ui/Banknotes.png"/>
                                 <span class="unlockprice"> </span>
                             </td>
-                            <td class="marketItemInfo"><img class="marketItemInfoIcon" src="/assets/images/ui/Info-50.png"></td>
+                            <td class="marketItemInfo">
+                                <img class="marketItemInfoIcon" src="/assets/images/ui/Info-50.png">
+                            </td>
                         </tr>
                     </table>
                 </li>
@@ -151,10 +157,11 @@
                 <table>
                     <tr>
                         <td align="left"><img class="cashIcon" src="/assets/images/ui/Banknotes.png"></td>
-                        <td width="60" align="right" class="assetAmount"></td>
+                        <td width="60" align="left" class="assetAmount"></td>
                         <td width="120"></td>
-                        <td align="left"><img class="cashIcon" src="/assets/images/ui/Bank_2.png"></td>
                         <td width="65" align="right" class="assetPay"></td>
+                        <td align="left"><img class="cashIcon" src="/assets/images/ui/Bank_2.png"></td>
+                        <td>Buy</td>
                     </tr>
                 </table>
             </li>
@@ -166,10 +173,11 @@
                 <table>
                     <tr>
                         <td align="left"><img class ="coinIcon" src="/assets/images/ui/Coin1.png"></td>
-                        <td width="60" align="right" class="assetAmount"></td>
+                        <td width="60" align="left" class="assetAmount"></td>
                         <td width="120"></td>
-                        <td align="left"><img class="cashIcon" src="/assets/images/ui/Banknotes.png"></td>
                         <td width="65" align="right" class="assetPay"></td>
+                        <td align="left"><img class="cashIcon" src="/assets/images/ui/Banknotes.png"></td>
+                        <td>Buy</td>
                     </tr>
                 </table>
             </li>
@@ -181,10 +189,11 @@
                 <table>
                     <tr>
                         <td align="left"><img class="waterIcon" src="/assets/images/ui/Water-48.png"></td>
-                        <td width="60" align="right" class="assetAmount"></td>
+                        <td width="60" align="left" class="assetAmount"></td>
                         <td width="120"></td>
-                        <td align="left"><img class="cashIcon" src="/assets/images/ui/Banknotes.png"></td>
                         <td width="65" align="right" class="assetPay"></td>
+                        <td align="left"><img class="cashIcon" src="/assets/images/ui/Banknotes.png"></td>
+                        <td>Buy</td>
                     </tr>
                 </table>
             </li>
