--- a/client/index_fixlayout.html
+++ b/client/index_fixlayout.html
@@ -146,10 +146,11 @@
                 <table>
                     <tr>
                         <td align="left"><img class="cashIcon" src="/assets/images/ui/Banknotes.png"></td>
-                        <td width="60" align="right" class="assetAmount"></td>
+                        <td width="60" align="left" class="assetAmount"></td>
                         <td width="120"></td>
+                        <td width="65" aligh="right" class="assetPay"></td>
                         <td align="left"><img class="cashIcon" src="/assets/images/ui/Bank_2.png"></td>
-                        <td width="65" aligh="right class="assetPay"></td>
+                        <td>Buy</td>
                     </tr>
                 </table>
             </li>
@@ -161,10 +162,11 @@
                 <table>
                     <tr>
                         <td align="left"><img class="coinIcon" src="/assets/images/ui/Coin1.png"></td>
-                        <td width="60" align="right" class="assetAmount"></td>
+                        <td width="60" align="left" class="assetAmount"></td>
                         <td width="120"></td>
-                        <td align="left"><img class="cashIcon" src="/assets/images/ui/Banknotes.png"></td>
                         <td width="65" align="right" class="assetPay"></td>
+                        <td align="left"><img class="cashIcon" src="/assets/images/ui/Banknotes.png"></td>
+                        <td>Buy</td>
                     </tr>
                 </table>
             </li>
@@ -176,10 +178,11 @@
                 <table>
                     <tr>
                         <td align="left"><img class="waterIcon" src="/assets/images/ui/Water-48.png"></td>
-                        <td width="60" align="right" class="assetAmount"></td>
+                        <td width="60" align="left" class="assetAmount"></td>
                         <td width="120"></td>
-                        <td align="left"><img class="cashIcon" src="/assets/images/ui/Banknotes.png"></td>
                         <td width="65" align="right" class="assetPay"></td>
+                        <td align="left"><img class="cashIcon" src="/assets/images/ui/Banknotes.png"></td>
+                        <td>Buy</td>
                     </tr>
                 </table>
             </li>
