del <li>-step 1

--- a/client/index_deploy.html
+++ b/client/index_deploy.html
@@ -97,30 +97,28 @@
         <div class="marketDialogPage" id="marketDialogPageTemplate">
             <!--This ul is populated by catalog items. Number of items per page is set in config sheet-->
             <ul class="marketDialogList">
-                <li class="marketDialogItem">
-                    <table>
-                        <tr>
-                            <td class="iconcell" >
-                                <img  class="marketItemImage" src="/favicon.ico?v=2"></td>
-                            <td class="marketItemTitle">Title</td>
-                            <td class="marketItemCoins">
-                                <img class="marketCoinIcon" src="assets/images/ui/Coin1.png">
-                                0
-                            </td>
-                            <td class="marketItemCash">
-                                <img class="marketCashIcon" src="assets/images/ui/Banknotes.png">
-                                0
-                            </td>
-                            <td class="unlock" role="button">Unlock
-                                <img src="assets/images/ui/Banknotes.png"/>
-                                <span class="unlockprice"> </span>
-                            </td>
-                            <td class="marketItemInfo">
-                                <img class="marketItemInfoIcon" src="/assets/images/ui/Info-50.png">
-                            </td>
-                        </tr>
-                    </table>
-                </li>
+                <table class="marketDialogItem">
+                    <tr>
+                        <td class="iconcell" >
+                            <img  class="marketItemImage" src="/favicon.ico?v=2"></td>
+                        <td class="marketItemTitle">Title</td>
+                        <td class="marketItemCoins">
+                            <img class="marketCoinIcon" src="assets/images/ui/Coin1.png">
+                            0
+                        </td>
+                        <td class="marketItemCash">
+                            <img class="marketCashIcon" src="assets/images/ui/Banknotes.png">
+                            0
+                        </td>
+                        <td class="unlock" role="button">Unlock
+                            <img src="assets/images/ui/Banknotes.png"/>
+                            <span class="unlockprice"> </span>
+                        </td>
+                        <td class="marketItemInfo">
+                            <img class="marketItemInfoIcon" src="/assets/images/ui/Info-50.png">
+                        </td>
+                    </tr>
+                </table>
             </ul>
         </div>
         <div class="pagination" id="marketDialogPagination">
