--- a/client/index_deploy.html
+++ b/client/index_deploy.html
@@ -97,8 +97,8 @@
         <div class="marketDialogPage" id="marketDialogPageTemplate">
             <!--This ul is populated by catalog items. Number of items per page is set in config sheet-->
             <ul class="marketDialogList">
-                <table class="marketDialogItem">
-                    <tr>
+                <table>
+                    <tr class="marketDialogItem">
                         <td class="iconcell" >
                             <img  class="marketItemImage" src="/favicon.ico?v=2"></td>
                         <td class="marketItemTitle">Title</td>
@@ -150,50 +150,41 @@
     </div>
     <div id="cashBuyDialog" title="Buy VBucks" style="display:none">
         <ui class="assetList" id="cashAssetList">
-            <li class="assetItem">
-                <table>
-                    <tr>
-                        <td align="left"><img class="cashIcon" src="/assets/images/ui/Banknotes.png"></td>
-                        <td width="60" align="left"><span class="assetAmount"></span></td>
-                        <td width="120"></td>
-                        <td width="65" align="right"><span class="assetPay"></span></td>
-                        <td align="left"><img class="cashIcon" src="/assets/images/ui/Bank_2.png"></td>
-                        <td>Buy</td>
-                    </tr>
-                </table>
-            </li>
+            <table width="250">
+                <tr class="assetItem">
+                    <td align="left"><img class="cashIcon" src="/assets/images/ui/Banknotes.png"></td>
+                    <td width="30%" align="left"><span class="assetAmount"></span></td>
+                    <td width="50%" align="right"><span class="assetPay"></span></td>
+                    <td align="left"><img class="cashIcon" src="/assets/images/ui/Bank_2.png"></td>
+                    <td><button>Buy</button></td>
+                </tr>
+            </table>
         </ui>
     </div>
     <div id="coinBuyDialog" title="Buy Coins" style="display:none">
         <ui class="assetList" id="coinAssetList">
-            <li class="assetItem">
-                <table>
-                    <tr>
-                        <td align="left"><img class="coinIcon" src="/assets/images/ui/Coin1.png"></td>
-                        <td width="60" align="left" class="assetAmount"></td>
-                        <td width="120"></td>
-                        <td width="65" align="right" class="assetPay"></td>
-                        <td align="left"><img class="cashIcon" src="/assets/images/ui/Banknotes.png"></td>
-                        <td>Buy</td>
-                    </tr>
-                </table>
-            </li>
+            <table width="250">
+                <tr class="assetItem">
+                    <td align="left"><img class="coinIcon" src="/assets/images/ui/Coin1.png"></td>
+                    <td width="30%" align="left" class="assetAmount"></td>
+                    <td width="50%" align="right" class="assetPay"></td>
+                    <td align="left"><img class="cashIcon" src="/assets/images/ui/Banknotes.png"></td>
+                    <td><button>Buy</button></td>
+                </tr>
+            </table>
         </ui>
     </div>
     <div id="waterBuyDialog" title="Buy Water" style="display:none">
         <ui class="assetList" id="waterAssetList">
-            <li class="assetItem">
-                <table>
-                    <tr>
-                        <td align="left"><img class="waterIcon" src="/assets/images/ui/Water-48.png"></td>
-                        <td width="60" align="left" class="assetAmount"></td>
-                        <td width="120"></td>
-                        <td width="65" align="right" class="assetPay"></td>
-                        <td align="left"><img class="cashIcon" src="/assets/images/ui/Banknotes.png"></td>
-                        <td>Buy</td>
-                    </tr>
-                </table>
-            </li>
+            <table width="250">
+                <tr class="assetItem">
+                    <td align="left"><img class="waterIcon" src="/assets/images/ui/Water-48.png"></td>
+                    <td width="30%" align="left" class="assetAmount"></td>
+                    <td width="50%" align="right" class="assetPay"></td>
+                    <td align="left"><img class="cashIcon" src="/assets/images/ui/Banknotes.png"></td>
+                    <td><button>Buy</button></td>
+                </tr>
+            </table>
         </ui>
     </div>
     <div class="editorTopNavBar" id="editorTopNavBar">
