--- a/client/index_mobile.html
+++ b/client/index_mobile.html
@@ -14,16 +14,16 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="game-engine-origin" content="http://www.isogenicengine.com">
     <meta http-equiv="X-UA-Compatible" content="IE=9">
     <title>Village Makeover</title>
     <!-- STYLES -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.0/themes/smoothness/jquery-ui.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js"></script>
-    <script src="https://apis.google.com/js/client:platform.js" async defer></script>
+    <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
+    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 
     <link href="client/css/jqueryui-overrides.css" rel="stylesheet" type="text/css" />
     <link href="client/css/game.css" rel="stylesheet" type="text/css"/>
@@ -211,7 +211,8 @@
     <div id="buyConfirmDialog" title="Confirm" style="display:none">
         <p id="buyConfirmMessage"></p>
         <button id="buyConfirmOK">OK</button>
-        <button id="buyConfirmYes"><span id="buyConfirmPrize"></span></button>
+        <button id="buyConfirmYes">Yes</button>
+        <button id="buyConfirmNo">No</button>
     </div>
     <div id="messageDialog" title="Message from Game" style="display:none">
         <p id="messageDialogMessage"></p>
