remove scroll bar

--- a/client/index_deploy.html
+++ b/client/index_deploy.html
@@ -97,7 +97,7 @@
         <div class="marketDialogPage" id="marketDialogPageTemplate">
             <!--This ul is populated by catalog items. Number of items per page is set in config sheet-->
             <ul class="marketDialogList">
-                <table>
+                <table border="1">
                     <tr class="marketDialogItem">
                         <td class="iconcell" >
                             <img  class="marketItemImage" src="/favicon.ico?v=2"></td>
